...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/card_info_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/underline"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="15dp"
...
                    tools:text="Content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="@string/fab_add_to_favorites"
        android:onClick="switchFavorite"
        android:src="@drawable/fab_favorite"
...
